[gd_scene load_steps=5 format=3 uid="uid://docl2niryulbx"]

[ext_resource type="Script" path="res://scripts/globali/UI/menu/options_menu/options_menu.gd" id="1_d1e87"]
[ext_resource type="FontFile" uid="uid://ci3inxy6xbgfy" path="res://assets/globali/GUI/fonts/ThaleahFat.ttf" id="1_qbq1m"]
[ext_resource type="PackedScene" uid="uid://b03ggtovvlac2" path="res://scenes/globali/UI/menu/options_menu/settings_tab_container.tscn" id="3_0yfdu"]
[ext_resource type="Theme" uid="uid://cnk304tv4ytv5" path="res://assets/globali/GUI/default.tres" id="3_i0yde"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1e87")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_qbq1m")
theme_override_font_sizes/font_size = 48
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsTabContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_0yfdu")]
layout_mode = 2
size_flags_vertical = 3

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_i0yde")
theme_override_fonts/font = ExtResource("1_qbq1m")
theme_override_font_sizes/font_size = 48
text = "Exit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Exit" to="." method="on_exit_button_down"]
